# benchmark-json-toon-vsc

./: .gitignore  README.md  main.py  pyproject.toml  tasks.py
benchmarking/: __init__.py  base.py  constants.py  gemini.py  openai.py  prompt_builder.py  utils.py
input-files/: raw-data.json  raw-data.toon  raw-data.vsc
prompts/: assess_response_consistencies.py  avenger_overall_attr.py  calculate_composite_score.py  can_avenger_defeat_avenger.py  can_avenger_handle_threat.py  choose_avenger_with_highest_stats.py  choose_suitable_avenger.py  create_balanced_team.py  find_top_3_highest_stat.py  team_synergy_score.py  weakness_assessment.py
reports/gemini/: GeminiBenchmarkingTool_can_avenger_defeat_avenger_report.csv  GeminiBenchmarkingTool_can_avenger_handle_threat_report.csv  GeminiBenchmarkingTool_choose_avenger_with_highest_stat_report.csv  GeminiBenchmarkingTool_find_suitable_avenger_report.csv  json_GeminiBenchmarkingTool_calculate_composite_score_report.csv  json_GeminiBenchmarkingTool_can_avenger_defeat_avenger_report.csv  json_GeminiBenchmarkingTool_can_avenger_handle_threat_report.csv  json_GeminiBenchmarkingTool_find_suitable_avenger_report.csv  json_GeminiBenchmarkingTool_find_top_3_highest_stat_report.csv  tasks-gemini.csv  toon_GeminiBenchmarkingTool_calculate_composite_score_report.csv  toon_GeminiBenchmarkingTool_can_avenger_defeat_avenger_report.csv  toon_GeminiBenchmarkingTool_can_avenger_handle_threat_report.csv  toon_GeminiBenchmarkingTool_find_suitable_avenger_report.csv  toon_GeminiBenchmarkingTool_find_top_3_highest_stat_report.csv  (+5 more)
(+20 files in other folders)
