[project]
name = "json-toon"
version = "0.1.0"
description = "Default description"
authors = [
    {name = "Soumyadeep", email = "ghoshsoumyadeep330@gmail.com"},
]
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "langchain>=1.2.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-core>=1.2.5",
    "ruff>=0.14.10",
    "pandas>=2.3.3",
    "google.generativeai>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = false
